# oamicard-backend

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: manage.py
src/authentication/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py  0002_alter_invitationcode_email.py  0003_alter_invitationcode_email.py  0004_invitationcode_first_name.py  0005_alter_invitationcode_first_name.py  0006_request.py  0007_request_created_at_request_updated_at.py
src/oamii_cards/: admin.py  asgi.py  middleware.py  models.py  settings.py  urls.py  wsgi.py
src/templates/email_templates/: connections.html  forget_password_token.html  reset_password.html  send_otp.html  welcome.html
src/user_profile/: apps.py  country_code.py  models.py  serializers.py  service.py  signals.py  urls.py  validators.py  views.py
src/user_profile/migrations/: 0001_initial.py  0002_userprofile_is_active.py  0003_alter_address_profile_and_more.py  0004_connections.py  0005_userprofile_first_name_userprofile_last_name_and_more.py  0006_rename_connection_profile_connections_connection_profile_id_and_more.py  0007_usersettings_analytics.py  0008_alter_address_profile_and_more.py  0009_alter_userprofile_profile_picture.py  0010_alter_links_provider_alter_links_url_and_more.py  0011_rename_user_profile_id_analytics_profile_and_more.py  0012_remove_connections_connection_profile_and_more.py  0013_alter_video_video_url.py  0014_userprofile_email_userprofile_phone_and_more.py  0017_merge_20221222_0433.py  (+28 more)
